add resume content, styling and functions

--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
               HELEEN EVERS
             </div>
 
-            <div class="h-subtitle">
+            <p class="h-subtitle">
               <span class="typed-subtitle"
-                >Digital Designer for Web & Video.</span
+                >Digital Designer for Web & Video </span
               ><span class="typed-cursor">|</span>
-              <br />
-              <span class="typed-subtitle">Based in Hasselt, Belgium.</span>
-            </div>
+            </p>
           </div>
+          <a href="#" class="mouse_btn"><i class="ri-mouse-fill"></i></a>
         </div>
       </div>
 
@@ -80,10 +79,10 @@
     </div>
 
     <!-- Load Components -->
-    <script src="assets/js/header-footer.js"></script>
     <script src="assets/js/menu.js"></script>
 
     <!-- Main JavaScript Files -->
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/typewriter.js"></script>
   </body>
 </html>
