Add resume content

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,13 @@
     <title>Heleen Evers | Portfolio</title>
 
     <!-- Adobe Fonts - Replace with kit ID -->
-    <!-- <link rel="stylesheet" href="https://use.typekit.net/[your-kit-id].css"> -->
+    <link rel="stylesheet" href="https://use.typekit.net/gce1qdi.css" />
 
     <!-- Fallback Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -64,7 +66,9 @@
               </p>
             </div>
           </div>
-          <a href="#" class="mouse_btn"><i class="ri-mouse-fill"></i></a>
+          <a href="#" class="mouse_btn"
+            ><i class="ri-mouse-line moving-mouse"></i
+          ></a>
         </div>
 
         <!-- Works -->
