--- a/resume.html
+++ b/resume.html
@@ -31,6 +31,7 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/resume.css" />
   </head>
 
   <body>
@@ -64,7 +65,7 @@
               </p>
             </div>
           </div>
-          <a href="#" class="mouse_btn" style="display: block"
+          <a href="#" class="mouse_btn"
             ><i class="ri-mouse-line moving-mouse"></i
           ></a>
         </div>
@@ -77,7 +78,7 @@
             </div>
             <div class="about-content">
               <div class="image">
-                <img src="assets/img/profilepic100.jpg" alt="Heleen Evers" />
+                <img src="assets/img/profilepic300.jpg" alt="Heleen Evers" />
               </div>
 
               <div class="desc">
@@ -131,31 +132,60 @@
                   <div class="resume-item">
                     <div class="date">2020 - present</div>
                     <div class="name">
-                      Online Content Creator & Digital Designer
+                      Front-End Web Designer & Digital Marketer
+                    </div>
+                    <p>Text</p>
+                    <div class="clients list">
+                      <ul>
+                        <li>
+                          <div class="client">
+                            <a href="#" target="_blank"
+                              >Website and Marketing Plan</a
+                            >
+                            (My Mini Mascots, UK)
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="resume-item">
+                    <div class="date">2020 - present</div>
+                    <div class="name">
+                      Video Content Creator & Motion Designer
                     </div>
                     <p>
-                      I took up video editing after a hiatus, inspired by
-                      project ideas from pupils at the secondary schools where I
-                      was a trainee teacher. During Lockdown, I decided to
-                      re-learn post production and zoomed in fully on motion
-                      graphics as my niche skill. I got picked up to supply
+                      During Lockdown, I decided to re-learn video post
+                      production and zoomed in on motion graphics as my niche
+                      skill as a videographer. I got picked up to supply
                       animated end card graphics to my favourite YouTube
                       creators nearly straight away. I continue to develop this
                       craft, now gravitating more towards interactive UI
-                      animation.
+                      animation. <br /><br />I provide post production services
+                      to online content creators and vloggers who supply their
+                      own footage, making sure the final product is polished and
+                      ready for online publishing. I'm also available to help
+                      produce and direct social media shoots.
                     </p>
                     <div class="clients list">
                       <ul>
                         <li>
                           <div class="client">
-                            <a href="#" target="_blank">Name</a>
-                            (Place, BE)
+                            <a href="#" target="_blank"
+                              >YouTube Video Graphics</a
+                            >
+                            (Foil Arms and Hog, IE)
                           </div>
                         </li>
                         <li>
                           <div class="client">
-                            <a href="#" target="_blank">Name</a>
-                            (Place, BE)
+                            <a href="#" target="_blank">Corporate Promo Reel</a>
+                            (Creatio Social)
+                          </div>
+                        </li>
+                        <li>
+                          <div class="client">
+                            <a href="#" target="_blank">Product Promo Reel</a>
+                            (Magnot Forget, BE)
                           </div>
                         </li>
                       </ul>
@@ -166,15 +196,19 @@
                     <div class="date">2018 - present</div>
                     <div class="name">Videographer & Editor</div>
                     <p>
-                      Planning and executing video shoots, editing raw footage
-                      into polished videos, and collaborating with clients to
-                      ensure their vision is realised. I currently specialise in
-                      event and aftermovie videography for stage performances
-                      (dance, comedy and theatre). <br /><br />
-                      I deliver high-quality teaser trailers and
-                      behind-the-scenes content shortly after the event, and
-                      full-length multicam edits including title graphis and
-                      captions in the final package.
+                      After completing a video portfolio and collaborating on a
+                      few projects during a videography course in 2010, I took
+                      up video editing again after a hiatus, inspired by project
+                      ideas from pupils at the secondary schools where I worked
+                      as a trainee teacher. <br /><br />Nowadays I take on
+                      small-scale solo projects. I plan and execute the shoot
+                      together with the client, and I turn the raw footage into
+                      a polished video product ready to publish online or
+                      distribute on flash drives or DVDs. Deliverables include
+                      teaser trailers and aftermovies, behind-the-scenes
+                      content, and full-length multicam edits including title
+                      graphis and captions in the final package. I specialise in
+                      video reporting for stage performances.
                     </p>
                     <div class="clients list">
                       <ul>
@@ -432,6 +466,20 @@
                   </div>
                   <div class="context">
                     Here I'll explain the context of this skill.
+                  </div>
+                  <div class="icons">
+                    <object
+                      type="image/svg+xml"
+                      data="assets/icons/icons8/icons8-adobe-photoshop-50.svg"
+                    >
+                      Photoshop
+                    </object>
+                    <object
+                      type="image/svg+xml"
+                      data="assets/icons/icons8/icons8-adobe-lightroom-50.svg"
+                    >
+                      Lightroom
+                    </object>
                   </div>
                 </li>
                 <li data-percentage="75">
