comments + blog main page

--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
                       alt="Amore Mio Three Cups"
                     />
                     <span class="info">
-                      <i class="ri-image-line icon"></i>
+                      <i class="ri-image-line"></i>
                     </span>
                   </a>
                 </div>
@@ -165,7 +165,7 @@
                       alt="Canvas Tote Bag MockUp"
                     />
                     <span class="info">
-                      <i class="ri-image-line icon"></i>
+                      <i class="ri-image-line"></i>
                     </span>
                   </a>
                 </div>
@@ -183,7 +183,7 @@
                   <a href="#popup--works-cardboard-box" class="has-popup-media">
                     <img src="assets/img/works/work3.jpg" alt="Cardboard Box" />
                     <span class="info">
-                      <i class="ri-add-line icon"></i>
+                      <i class="ri-add-line"></i>
                     </span>
                   </a>
                 </div>
@@ -209,7 +209,7 @@
                       alt="Coffee Cup In Hand"
                     />
                     <span class="info">
-                      <i class="ri-play-circle-line icon"></i>
+                      <i class="ri-play-circle-line"></i>
                     </span>
                   </a>
                 </div>
@@ -236,7 +236,7 @@
                       alt="Love & Care Ceramic Bottles"
                     />
                     <span class="info">
-                      <i class="ri-external-link-line icon"></i>
+                      <i class="ri-external-link-line"></i>
                     </span>
                   </a>
                 </div>
@@ -260,7 +260,7 @@
                       alt="Marta Veludo Beautiful Poster"
                     />
                     <span class="info">
-                      <i class="ri-music-line icon"></i>
+                      <i class="ri-music-line"></i>
                     </span>
                   </a>
                 </div>
@@ -281,7 +281,7 @@
                       alt="Minimal Poster Frame"
                     />
                     <span class="info">
-                      <i class="ri-image-line icon"></i>
+                      <i class="ri-image-line"></i>
                     </span>
                   </a>
                 </div>
@@ -302,7 +302,7 @@
                       alt="Shopping Gift Bag"
                     />
                     <span class="info">
-                      <i class="ri-image-line icon"></i>
+                      <i class="ri-image-line"></i>
                     </span>
                   </a>
                 </div>
@@ -326,7 +326,7 @@
                       alt="Social Website"
                     />
                     <span class="info">
-                      <i class="ri-add-line icon"></i>
+                      <i class="ri-add-line"></i>
                     </span>
                   </a>
                 </div>
