add post search logic + giscus post comment function

--- a/portfolio.html
+++ b/portfolio.html
@@ -356,6 +356,9 @@
       <div class="line right"></div>
     </div>
 
+    <!-- Sidebar placeholder -->
+    <div id="sidebar-container"></div>
+
     <!-- Load Components -->
     <script src="assets/js/menu.js"></script>
 
