add and style portfolio popups

--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
             <div class="box-items post-items">
               <div class="box-item post-item">
                 <div class="image">
-                  <a href="#" class="has-popup-gallery">
+                  <a href="posts/first-post.html" class="has-popup-gallery">
                     <img src="assets/img/works/work1.jpg" alt="First Work" />
                     <span class="info">
                       <i class="ri-book-open-line"></i>
