--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       rel="stylesheet"
     />
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico" />
+
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
