add contact form + fix portfolio popups

--- a/resume.html
+++ b/resume.html
@@ -682,68 +682,83 @@
                 <div class="icon">
                   <i class="ri-code-s-slash-line"></i>
                 </div>
-                <div class="name">Front-end</div>
-                <p>
-                  Front-end web development is the practice of converting data
-                  to a graphical interface, through the use of HTML, CSS, and
-                  JavaScript.
-                </p>
+                <div>
+                  <div class="name">Front-end</div>
+                  <p>
+                    Front-end web development is the practice of converting data
+                    to a graphical interface, through the use of HTML, CSS, and
+                    JavaScript.
+                  </p>
+                </div>
               </div>
 
               <div class="service-item">
                 <div class="icon">
                   <i class="ri-smartphone-line"></i>
                 </div>
-                <div class="name">Mobile Application</div>
-                <p>
-                  A mobile application, most commonly referred to as an app, is
-                  a type of application software designed to run on a mobile.
-                </p>
+                <div>
+                  <div class="name">Mobile Application</div>
+                  <p>
+                    A mobile application, most commonly referred to as an app,
+                    is a type of application software designed to run on a
+                    mobile.
+                  </p>
+                </div>
               </div>
 
               <div class="service-item">
                 <div class="icon">
                   <i class="ri-search-line"></i>
                 </div>
-                <div class="name">Investigation</div>
-                <p>
-                  Investigation, examination, inquiry, research express the idea
-                  of an active effort to find out something.
-                </p>
+                <div>
+                  <div class="name">Investigation</div>
+                  <p>
+                    Investigation, examination, inquiry, research express the
+                    idea of an active effort to find out something.
+                  </p>
+                </div>
               </div>
 
               <div class="service-item">
                 <div class="icon">
                   <i class="ri-code-line"></i>
                 </div>
-                <div class="name">Programming</div>
-                <p>
-                  Computer programming is the process of designing and building
-                  an executable computer program to accomplish a specific.
-                </p>
+                <div>
+                  <div class="name">Programming</div>
+                  <p>
+                    Computer programming is the process of designing and
+                    building an executable computer program to accomplish a
+                    specific.
+                  </p>
+                </div>
               </div>
 
               <div class="service-item">
                 <div class="icon">
                   <i class="ri-customer-service-line"></i>
                 </div>
-                <div class="name">Awesome Supports</div>
-                <p>
-                  Awesome Support is the most versatile and feature-rich. Get
-                  started for free and add premium features as your business
-                  grows.
-                </p>
+                <div>
+                  <div class="name">Awesome Supports</div>
+                  <p>
+                    Awesome Support is the most versatile and feature-rich. Get
+                    started for free and add premium features as your business
+                    grows.
+                  </p>
+                </div>
               </div>
 
               <div class="service-item">
                 <div class="icon">
                   <i class="ri-global-line"></i>
                 </div>
-                <div class="name">Web Development</div>
-                <p>
-                  Web development is the work involved in developing a Web site
-                  for the Internet or an intranet and social network services.
-                </p>
+                <div>
+                  <div class="name">Web Development</div>
+                  <p>
+                    Web development is the work involved in developing a Web
+                    site for the Internet or an intranet and social network
+                    services.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
