--- a/portfolio.html
+++ b/portfolio.html
@@ -313,6 +313,9 @@
     <!-- Content -->
     <div id="content--cardboard-box" style="display: none">
       <div class="popup-box">
+        <button class="popup-close-inner" type="button" title="Close">
+          &times;
+        </button>
         <div class="image">
           <img src="/assets/img/works/work3.jpg" alt="Cardboard Box" />
         </div>
@@ -354,7 +357,7 @@
             </p>
           </div>
           <a
-            href="https://bslthemes.com/"
+            href="/posts/first-post.html"
             target="_blank"
             class="btn"
             data-text="View Project"
