add ajax for form submission

--- a/contact.html
+++ b/contact.html
@@ -197,5 +197,6 @@
     <!-- Main JavaScript Files -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/typewriter.js"></script>
+    <script src="assets/js/contact.js"></script>
   </body>
 </html>
