add typing animation and fix navigation

--- a/index.html
+++ b/index.html
@@ -38,14 +38,12 @@
 
   <body class="homepage">
     <!-- Preloader -->
-    <div class="preloader" id="preloader">
-      <div class="centralize full-width">
-        <div class="vertical-center">
-          <div class="pre-inner">
-            <span class="typed-load">loading...</span
-            ><span class="typed-cursor">|</span>
-          </div>
+    <div id="preloader" class="preloader">
+      <div class="pre-inner">
+        <div class="load typing-load" style="display: none">
+          <p>loading...</p>
         </div>
+        <span class="typed-load"></span>
       </div>
     </div>
 
@@ -63,11 +61,11 @@
               HELEEN EVERS
             </div>
 
-            <p class="h-subtitle">
-              <span class="typed-subtitle"
-                >Digital Designer for Web & Video </span
-              ><span class="typed-cursor">|</span>
-            </p>
+            <!-- Subtitle -->
+            <div class="h-subtitle">
+              <span class="always-visible">Digital Designer&nbsp;</span>
+              <span class="typed-subtitle"></span>
+            </div>
           </div>
           <a href="#" class="mouse_btn"><i class="ri-mouse-line"></i></a>
         </div>
@@ -89,8 +87,11 @@
     <!-- Load Components -->
     <script src="assets/js/menu.js"></script>
 
+    <!-- Typed Scripts -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="assets/js/typewriter.js"></script>
+
     <!-- Main JavaScript Files -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/typewriter.js"></script>
   </body>
 </html>
