--- a/contact.html
+++ b/contact.html
@@ -36,14 +36,12 @@
 
   <body>
     <!-- Preloader -->
-    <div class="preloader" id="preloader">
-      <div class="centralize full-width">
-        <div class="vertical-center">
-          <div class="pre-inner">
-            <span class="typed-load">loading...</span
-            ><span class="typed-cursor">|</span>
-          </div>
+    <div id="preloader" class="preloader">
+      <div class="pre-inner">
+        <div class="load typing-load" style="display: none">
+          <p>loading...</p>
         </div>
+        <span class="typed-load"></span>
       </div>
     </div>
 
@@ -58,12 +56,17 @@
         <div class="section started">
           <div class="started-content">
             <div class="h-title glitch-effect" data-text="CONTACT">CONTACT</div>
-            <div class="h-subtitle typing-bread">
+
+            <!-- Hidden source text for typing -->
+            <div class="h-subtitle typing-bread" style="display: none">
               <p>
                 <a href="index.html">Home</a> /
-                <a href="contact.html">Contact</a>
+                <strong><a href="contact.html">Contact</a></strong>
               </p>
             </div>
+
+            <!-- Visible target for typewriter effect -->
+            <span class="typed-bread"></span>
           </div>
           <a href="#" class="mouse_btn"
             ><i class="ri-mouse-line moving-mouse"></i
@@ -140,7 +143,7 @@
                 <!-- Honeypot field for spam bots -->
                 <p style="display: none">
                   <label
-                    >Don’t fill this out if you're human:
+                    >Don't fill this out if you're human:
                     <input name="bot-field"
                   /></label>
                 </p>
@@ -194,9 +197,12 @@
     <!-- Load Components -->
     <script src="assets/js/menu.js"></script>
 
+    <!-- Typed Scripts -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="assets/js/typewriter.js"></script>
+
     <!-- Main JavaScript Files -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/typewriter.js"></script>
     <script src="assets/js/contact.js"></script>
   </body>
 </html>
